--- a/cart.html
+++ b/cart.html
@@ -76,8 +76,7 @@
             </div>
             <div class="checkout-discount__button">
                 <a href="checkout.html" class="checkout-button">Checkout</a>
-                <input type="text" class="discount-code-input" placeholder="Enter Discount Code"> 
-                <label for="discount-code" class="discount-code-label" aria-label="Enter Discount Code"></label>         
+                <input type="text" id="discount-code" class="discount-code-input" placeholder="Enter Discount Code" aria-label="Enter Discount Code"> 
             </div>
         </section>
         <h3>Don't miss out on these:</h3>
