--- a/confirmation.html
+++ b/confirmation.html
@@ -85,9 +85,11 @@
                 </div>
             </section>
         </div>
-        <div class="continue-shopping__button">
-            <a href="index.html" class="continue-shopping">Continue Shopping</a>
-        </div> 
+        <section class="continue-shopping__confirmation">
+            <div class="continue-shopping__button">
+                <a href="index.html" class="continue-shopping">Continue Shopping</a>
+            </div>
+        </section>
         <section class="camping-image"></section>
     </main>
     <footer>
