--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -28,7 +28,7 @@
             <input type="checkbox" id="menu-checkbox">
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-                <li><a href="mens-jackets.html">Men's</a></li>
+                <li><a href="mens-jackets.html" class="mens-jackets-nav">Men's</a></li>
                 <li><a href="coming-soon.html">Women's</a></li>
                 <li><a href="coming-soon.html">Sale</a></li>
                 <li><a href="coming-soon.html">About Us</a></li>
